[package]
edition = "2021"
name = "native_fungible_token"
version = "3.0.1"
authors = ["Nimish Agrawal nimish@lagu.na"]

[dependencies]
ink_primitives = { version = "~3.0", default-features = false }
ink_metadata = { version = "~3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.0", default-features = false }
ink_storage = { version = "~3.0", default-features = false }
ink_lang = { version = "~3.0", default-features = false }
ink_lang_codegen = { version = "~3.0", default-features = false }
ink_prelude = {version = "~3.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
ethereum-types = {version = "0.13.1", default-features = false, features = ["codec", "rlp"] }

[lib]
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib",
  "rlib",
]
name = "native_fungible_token"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_primitives/std",
  "scale/std",
  "scale-info/std",
]

[workspace]
